# Aplikacjia_Kalkulator

./: README.md
CalculatorApp/: CMakeLists.txt
CalculatorApp/CalculatorApp/: CMakeLists.txt
CalculatorApp/CalculatorApp/include/: Application.hpp  IO.hpp  Menu.hpp  MyMath.hpp  Terminal.hpp
CalculatorApp/CalculatorApp/src/: Application.cpp  Menu.cpp  MyMath.cpp  Terminal.cpp  main.cpp
